--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,5 @@
+global.params.p1=5555
+global.params.p2=8888
 spring.h2.console.enabled=true
 spring.cloud.discovery.enabled=true
 spring.cloud.config.enabled=true
