--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
+spring.cloud.config.server.git.uri=https://github.com/khalilamira/config-repo-microservices
+spring.cloud.config.server.git.username=khalilamirapro@gmail.com
+spring.cloud.config.server.git.password=TKNT9dRndRh5iXK
 global.params.p1=5555
 global.params.p2=8888
 spring.h2.console.enabled=true
